resizable pane collapse state fixed

--- a/src/app/componentes/resizable-panes/resizable-panes.component.scss
+++ b/src/app/componentes/resizable-panes/resizable-panes.component.scss
@@ -49,6 +49,7 @@
 
     button {
       position: fixed;
+      z-index: 1000;
       cursor: grab;
     }
   }
